<resources>
    <string name="app_name">PokeDex</string>
    <string name="poke_mon">Poke\'mon!</string>
    <string name="max">Enter Value max 100</string>
    <string name="submit">Submit</string>
    <string name="slider_description">Amount of Pokemon cards returned</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_slider">Label for slider</string>
    <string name="limit">Limit</string>
    <string name="tv_name">Poke\'mon Name</string>
</resources>