<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.PokemonSettings">

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="277dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Discrete slider -->

        <TextView
            android:id="@+id/label_for_slider"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:contentDescription="@string/label_slider"
            android:ems="10"
            android:gravity="center"
            android:labelFor="@id/slider_poke"
            android:letterSpacing="1"
            android:text="@string/limit"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline5"
            android:textColor="@color/poke_gold_100"
            android:textSize="40sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_poke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/slider_description"
            android:stepSize="10.0"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:thumbColor="#e8ce0f"
            app:tickColor="#1976D2"
            app:trackColor="#E8CE0F"
            app:trackHeight="10dp" />

        <EditText
            android:id="@+id/tv_query_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white_50"
            android:gravity="center"
            android:hint="@string/tv_name"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            android:textColor="@color/black_900"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:backgroundTint="@color/poke_blue_100"
            android:text="@string/submit"
            android:textColor="@color/poke_gold_100"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>